# timescale-access

./: .buildinfo  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  api.html  docker-compose.yaml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: ci.yaml  docs.yaml  lint.yaml
_modules/: index.html
_modules/timescale_access/: analysis.html  client.html  engine.html  read.html  write.html
_sources/: api.rst.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
src/timescale_access/: analysis.py  client.py  engine.py  read.py  write.py
tests/: config.py  conftest.py  test_client.py
